--- a/games/game2.html
+++ b/games/game2.html
@@ -2,20 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>New Game</title>
+  <title>Team A vs Team B</title>
   <link rel="stylesheet" href="../style.css">
+  <style>
+    .team-logos {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+      margin: 20px 0;
+    }
+    .team-logos img {
+      height: 80px;
+    }
+    .score {
+      text-align: center;
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-bottom: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 20px 0;
+    }
+    table, th, td {
+      border: 1px solid #444;
+    }
+    th, td {
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background-color: #ddd;
+    }
+  </style>
 </head>
 <body>
-  <h1>New Team vs Other Team</h1>
+  <h1>Team A vs Team B</h1>
   <p>Date: 2025-08-21</p>
-  <p>Score: New Team 88 - 90 Other Team</p>
 
-  <h2>Stats</h2>
+  <!-- Logos -->
+  <div class="team-logos">
+    <div>
+      <img src="Flag_of_Poland.svg.webp" alt="Team A Logo">
+      <p>Team A</p>
+    </div>
+    <div>
+      <img src="image.png" alt="Team B Logo">
+      <p>Team B</p>
+    </div>
+  </div>
+
+  <!-- Final Score -->
+  <p class="score">Team A 95 – 88 Team B</p>
+
+  <!-- Top Stats -->
+  <h2>Top Stats</h2>
   <ul>
-    <li>Top Scorer: Player A (30 pts)</li>
-    <li>Top Rebounder: Player B (11 rebs)</li>
-    <li>Top Assists: Player C (7 asts)</li>
+    <li>TOP SCORER: Lauri MARKKANEN (42)</li>
+    <li>REBOUNDS: Lauri MARKKNANEN (12)</li>
+    <li>ASSISTS: Andrzej PLUTA (6)</li>
+    <li>RATING: Lauri MARKKANEN (10)</li>
   </ul>
+
+  <!-- Full Stats Team A -->
+  <h2>POLAND Stats</h2>
+  <table>
+    <tr>
+      <th>Player</th>
+      <th>Points</th>
+      <th>Rebounds</th>
+      <th>Assists</th>
+      <th>Rating</th>
+    </tr>
+    <tr>
+      <td>Aleksander BALCEROWSKI</td>
+      <td>17</td>
+      <td>4</td>
+      <td>0</td>
+      <td>6.7</td>
+    </tr>
+    <tr>
+      <td>Mateusz PPONITKA</td>
+      <td>12</td>
+      <td>5</td>
+      <td>5</td>
+      <td>7.1</td>
+    </tr>
+    <tr>
+      <td>Dominik OLEJNICZAK</td>
+      <td>11</td>
+      <td>6</td>
+      <td>0</td>
+      <td>6.7</td>
+    </tr>
+    <tr>
+      <td>Przemyslaw ZOLNIEREWICZ</td>
+      <td>11</td>
+      <td>1</td>
+      <td>0</td>
+      <td>6.4</td>
+    </tr>
+  </table>
+
+  <!-- Full Stats Team B -->
+  <h2>FINLAND Stats</h2>
+  <table>
+    <tr>
+      <th>Player</th>
+      <th>Points</th>
+      <th>Rebounds</th>
+      <th>Assists</th>
+      <th>Rating</th>
+    </tr>
+    <tr>
+      <td>Lauri MARKKANEN</td>
+      <td>42</td>
+      <td>12</td>
+      <td>0</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td>Olivier NKAMHOUA</td>
+      <td>12</td>
+      <td>5</td>
+      <td>4</td>
+      <td>7.4</td>
+    </tr>
+    <tr>
+      <td>Sasu SALIN</td>
+      <td>11</td>
+      <td>0</td>
+      <td>4</td>
+      <td>6.9</td>
+    </tr>
+  </table>
 
   <a href="../index.html">Back to all games</a>
 </body>
