--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>All Games</h2>
   <ul id="gameList">
     <li><a href="games/game1.html">Team A vs Team B</a></li>
-    <li><a href="games/game2.html">Team C vs Team D</a></li>
+    <li><a href="games/game2.html">Poland vs Finland</a></li>
     <li><a href="games/game3.html">Team E vs Team F</a></li>
   </ul>
 
@@ -22,3 +22,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
