--- a/games/game2.html
+++ b/games/game2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Team A vs Team B</title>
+  <title>Poland vs. Finland</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     .team-logos {
@@ -39,18 +39,19 @@
   </style>
 </head>
 <body>
-  <h1>Team A vs Team B</h1>
-  <p>Date: 2025-08-21</p>
+  <h1>Poland vs Finland</h1>
+  <p>Date: 17. August 2025</p>
+  <p>International Friendly</p>
 
   <!-- Logos -->
   <div class="team-logos">
     <div>
-      <img src="Flag_of_Poland.svg.webp" alt="Team A Logo">
-      <p>Team A</p>
+      <img src="Flag_of_Poland.svg.webp" alt="image.png">
+      <p>Poland</p>
     </div>
     <div>
       <img src="image.png" alt="Team B Logo">
-      <p>Team B</p>
+      <p>Finland</p>
     </div>
   </div>
 
@@ -84,7 +85,7 @@
       <td>6.7</td>
     </tr>
     <tr>
-      <td>Mateusz PPONITKA</td>
+      <td>Mateusz PONITKA</td>
       <td>12</td>
       <td>5</td>
       <td>5</td>
