--- a/games/game2.html
+++ b/games/game2.html
@@ -56,10 +56,10 @@
   </div>
 
   <!-- Final Score -->
-  <p class="score">Team A 95 – 88 Team B</p>
+  <p class="score">POLAND 88 – 97 FINLAND</p>
 
   <!-- Top Stats -->
-  <h2>Top Stats</h2>
+  <h2>Statistics</h2>
   <ul>
     <li>TOP SCORER: Lauri MARKKANEN (42)</li>
     <li>REBOUNDS: Lauri MARKKNANEN (12)</li>
