--- a/games/game2.html
+++ b/games/game2.html
@@ -46,12 +46,10 @@
   <!-- Logos -->
   <div class="team-logos">
     <div>
-      <img src="Flag_of_Poland.svg.webp" alt="image.png">
-      <p>Poland</p>
+      <img src="Flag_of_Poland (1).png" alt="Team1Logo">
     </div>
     <div>
-      <img src="image.png" alt="Team B Logo">
-      <p>Finland</p>
+      <img src="Flag_of_Finland.svg.png" alt="Team2Logo">
     </div>
   </div>
 
