--- a/games/game2.html
+++ b/games/game2.html
@@ -46,10 +46,10 @@
   <!-- Logos -->
   <div class="team-logos">
     <div>
-      <img src="Poland.png" alt="Team1Logo">
+      <img src="images/Poland.png" alt="Team1Logo">
     </div>
     <div>
-      <img src="Finland.png" alt="Team2Logo">
+      <img src="images/Finland.png" alt="Team2Logo">
     </div>
   </div>
 
