--- a/games/game2.html
+++ b/games/game2.html
@@ -57,7 +57,7 @@
 </head>
 <body>
   <!-- Competition Logo -->
-  <img src="../images/competition.png" alt="Competition Logo" class="competition-logo">
+  <img src="../images/Fibafriendly.png" alt="Competition Logo" class="competition-logo">
 
   <h1>Poland vs Finland</h1>
   <p>Date: 17. August 2025</p>
