--- a/games/game2.html
+++ b/games/game2.html
@@ -14,12 +14,14 @@
 
     /* Competition logo in the top-right corner */
     .competition-logo {
-      position: fixed; /* stays in corner even when scrolling */
-      top: 10px;
-      right: 10px;
-      width: 120px; /* adjust size */
-      height: auto;
-      z-index: 100;
+  position: fixed;       /* fixed to viewport */
+  top: 10px;             /* distance from top */
+  right: 10px;           /* distance from right */
+  width: 120px;          /* adjust size */
+  height: auto;
+  z-index: 9999;         /* very high to stay above everything */
+  pointer-events: none;  /* optional: lets you click through the logo */
+}
     }
 
     .team-logos {
