--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <h1>Basketball Game Archive</h1>
 
-  <!-- Competitions Section -->
+  <!-- Competitions Slide -->
   <h2>Competitions</h2>
   <div id="competitionList">
     <span class="competition" data-competition="International Friendly">International Friendly</span>
@@ -42,23 +42,16 @@
     <span class="competition" data-competition="World Cup Qualifiers">World Cup Qualifiers</span>
   </div>
 
-  <h2>All Games</h2>
-  <ul id="gameList">
+  <!-- Games by Competition -->
+  <h2>Games</h2>
+  <ul id="competitionResults"></ul>
+
+  <!-- Hidden master list of games (used for filtering, not shown initially) -->
+  <ul id="gameList" style="display:none;">
     <li data-competition="EuroBasket Qualifiers"><a href="games/game1.html" data-date="2025-08-15">Team A vs Team B</a></li>
     <li data-competition="International Friendly"><a href="games/game2.html" data-date="2025-08-17">Poland vs Finland</a></li>
     <li data-competition="World Cup Qualifiers"><a href="games/game3.html" data-date="2025-08-18">Team E vs Team F</a></li>
   </ul>
-
-  <h2>Games by Competition</h2>
-  <ul id="competitionResults"></ul>
-
-  <h2>Search Games</h2>
-  <input type="text" id="searchBox" placeholder="Search team...">
-  <ul id="searchResults"></ul>
-
-  <h2>Find Games by Date</h2>
-  <input type="date" id="gameDate">
-  <ul id="dateResults"></ul>
 
   <script>
     // --- COMPETITION FILTER ---
@@ -83,46 +76,9 @@
             competitionResults.appendChild(li);
           });
         }
-      }
-    });
 
-    // --- SEARCH FUNCTION ---
-    const searchBox = document.getElementById("searchBox");
-    const searchResults = document.getElementById("searchResults");
-
-    searchBox.addEventListener("input", () => {
-      const query = searchBox.value.toLowerCase();
-      searchResults.innerHTML = "";
-      allGames.forEach(game => {
-        const link = game.querySelector("a");
-        if (link.textContent.toLowerCase().includes(query)) {
-          const li = document.createElement("li");
-          li.classList.add("game");
-          li.innerHTML = `<a href="${link.href}">${link.textContent}</a>`;
-          searchResults.appendChild(li);
-        }
-      });
-    });
-
-    // --- DATE PICKER FUNCTION ---
-    const gameDateInput = document.getElementById("gameDate");
-    const dateResults = document.getElementById("dateResults");
-
-    gameDateInput.addEventListener("change", () => {
-      const selectedDate = gameDateInput.value;
-      dateResults.innerHTML = "";
-
-      const matches = allGames.filter(game => game.querySelector("a").getAttribute("data-date") === selectedDate);
-
-      if (matches.length === 0) {
-        dateResults.innerHTML = "<li>No games on this date.</li>";
-      } else {
-        matches.forEach(game => {
-          const li = document.createElement("li");
-          li.classList.add("game");
-          li.innerHTML = `<a href="${game.querySelector("a").href}">${game.querySelector("a").textContent}</a>`;
-          dateResults.appendChild(li);
-        });
+        // Scroll to results after click (optional)
+        competitionResults.scrollIntoView({ behavior: "smooth" });
       }
     });
   </script>
