--- a/games/game2.html
+++ b/games/game2.html
@@ -2,170 +2,156 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Poland vs. Finland</title>
-  <link rel="stylesheet" href="../style.css">
+  <title>Basketball Game Archive</title>
+  <link rel="stylesheet" href="style.css">
   <style>
-    /* Light green background for the page */
     body {
-      background-color: #d4f4c4; /* light green */
       font-family: Arial, sans-serif;
-      position: relative;
     }
 
-    /* Competition logo in the top-right corner */
-    .competition-logo {
-      position: fixed; /* stays in corner even when scrolling */
-      top: 10px;
-      right: 10px;
-      width: 120px; /* adjust size */
-      height: auto;
-      z-index: 100;
-    }
-
-    .team-logos {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 30px;
-      margin: 20px 0;
-    }
-
-    .team-logos img {
-      height: 80px;
-    }
-
-    .score {
-      text-align: center;
-      font-size: 1.5em;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 20px 0;
-    }
-
-    table, th, td {
-      border: 1px solid #444;
-    }
-
-    th, td {
+    .game {
+      margin: 5px 0;
       padding: 8px;
-      text-align: center;
+      border-radius: 6px;
+      background: #f4f4f4;
     }
 
-    th {
-      background-color: #ddd;
+    .game a {
+      text-decoration: none;
+      color: #333;
+    }
+
+    .competition {
+      margin: 5px 0;
+      padding: 6px 10px;
+      background: #cce5ff;
+      border-radius: 4px;
+      cursor: pointer;
+      display: inline-block;
+    }
+
+    .competition:hover {
+      background: #99ccff;
+    }
+
+    input {
+      padding: 6px;
+      margin: 4px 0;
+      width: 250px;
     }
   </style>
 </head>
 <body>
+  <h1>Basketball Game Archive</h1>
 
-  <!-- Competition Logo -->
-  <img src="../images/Fibafriendly.png" alt="Competition Logo" class="competition-logo">
-
-  <h1>Poland vs Finland</h1>
-  <p>Date: 17. August 2025</p>
-  <p>International Friendly</p>
-
-  <!-- Logos -->
-  <div class="team-logos">
-    <div>
-      <img src="../images/Poland.png" alt="Team1Logo">
-    </div>
-    <div>
-      <img src="../images/Finland.png" alt="Team2Logo">
-    </div>
+  <!-- Competitions Slide -->
+  <h2>Competitions</h2>
+  <div id="competitionList">
+    <span class="competition" data-competition="International Friendly">International Friendly</span>
+    <span class="competition" data-competition="EuroBasket Qualifiers">EuroBasket Qualifiers</span>
+    <span class="competition" data-competition="World Cup Qualifiers">World Cup Qualifiers</span>
   </div>
 
-  <!-- Final Score -->
-  <p class="score">POLAND 88 – 97 FINLAND</p>
+  <!-- Games by Competition -->
+  <h2>Games</h2>
+  <ul id="competitionResults"></ul>
 
-  <!-- Top Stats -->
-  <h2>Statistics</h2>
-  <ul>
-    <li>TOP SCORER: Lauri MARKKANEN (42)</li>
-    <li>REBOUNDS: Lauri MARKKNANEN (12)</li>
-    <li>ASSISTS: Andrzej PLUTA (6)</li>
-    <li>RATING: Lauri MARKKANEN (10)</li>
+  <!-- SEARCH SECTION -->
+  <h2>Search Games</h2>
+  <input type="text" id="searchBox" placeholder="Search team...">
+  <ul id="searchResults"></ul>
+
+  <!-- DATE PICKER SECTION -->
+  <h2>Find Games by Date</h2>
+  <input type="date" id="gameDate">
+  <ul id="dateResults"></ul>
+
+  <!-- Hidden master list of games -->
+  <ul id="gameList" style="display:none;">
+    <li data-competition="EuroBasket Qualifiers"><a href="games/game1.html" data-date="2025-08-15">Team A vs Team B</a></li>
+    <li data-competition="International Friendly"><a href="games/game2.html" data-date="2025-08-17">Poland vs Finland</a></li>
+    <li data-competition="World Cup Qualifiers"><a href="games/game3.html" data-date="2025-08-18">Team E vs Team F</a></li>
   </ul>
 
-  <!-- Full Stats Team A -->
-  <h2>POLAND Stats</h2>
-  <table>
-    <tr>
-      <th>Player</th>
-      <th>Points</th>
-      <th>Rebounds</th>
-      <th>Assists</th>
-      <th>Rating</th>
-    </tr>
-    <tr>
-      <td>Aleksander BALCEROWSKI</td>
-      <td>17</td>
-      <td>4</td>
-      <td>0</td>
-      <td>6.7</td>
-    </tr>
-    <tr>
-      <td>Mateusz PONITKA</td>
-      <td>12</td>
-      <td>5</td>
-      <td>5</td>
-      <td>7.1</td>
-    </tr>
-    <tr>
-      <td>Dominik OLEJNICZAK</td>
-      <td>11</td>
-      <td>6</td>
-      <td>0</td>
-      <td>6.7</td>
-    </tr>
-    <tr>
-      <td>Przemyslaw ZOLNIEREWICZ</td>
-      <td>11</td>
-      <td>1</td>
-      <td>0</td>
-      <td>6.4</td>
-    </tr>
-  </table>
+  <script>
+    const allGames = Array.from(document.querySelectorAll("#gameList li"));
 
-  <!-- Full Stats Team B -->
-  <h2>FINLAND Stats</h2>
-  <table>
-    <tr>
-      <th>Player</th>
-      <th>Points</th>
-      <th>Rebounds</th>
-      <th>Assists</th>
-      <th>Rating</th>
-    </tr>
-    <tr>
-      <td>Lauri MARKKANEN</td>
-      <td>42</td>
-      <td>12</td>
-      <td>0</td>
-      <td>10</td>
-    </tr>
-    <tr>
-      <td>Olivier NKAMHOUA</td>
-      <td>12</td>
-      <td>5</td>
-      <td>4</td>
-      <td>7.4</td>
-    </tr>
-    <tr>
-      <td>Sasu SALIN</td>
-      <td>11</td>
-      <td>0</td>
-      <td>4</td>
-      <td>6.9</td>
-    </tr>
-  </table>
+    // --- COMPETITION FILTER ---
+    const competitionList = document.getElementById("competitionList");
+    const competitionResults = document.getElementById("competitionResults");
+    const searchResults = document.getElementById("searchResults");
+    const dateResults = document.getElementById("dateResults");
+    const searchBox = document.getElementById("searchBox");
+    const gameDateInput = document.getElementById("gameDate");
 
-  <a href="../index.html">Back to all games</a>
+    competitionList.addEventListener("click", (e) => {
+      if (e.target.classList.contains("competition")) {
+        const compName = e.target.getAttribute("data-competition");
+        competitionResults.innerHTML = "";
+        searchResults.innerHTML = ""; // clear search results
+        dateResults.innerHTML = "";   // clear date results
+        searchBox.value = "";         // clear search box
+        gameDateInput.value = "";     // clear date picker
 
+        const matches = allGames.filter(game => game.getAttribute("data-competition") === compName);
+
+        if (matches.length === 0) {
+          competitionResults.innerHTML = "<li>No games in this competition.</li>";
+        } else {
+          matches.forEach(game => {
+            const li = document.createElement("li");
+            li.classList.add("game");
+            li.innerHTML = `<a href="${game.querySelector("a").href}">${game.querySelector("a").textContent}</a>`;
+            competitionResults.appendChild(li);
+          });
+        }
+
+        competitionResults.scrollIntoView({ behavior: "smooth" });
+      }
+    });
+
+    // --- SEARCH FUNCTION ---
+    searchBox.addEventListener("input", () => {
+      const query = searchBox.value.toLowerCase();
+      searchResults.innerHTML = "";
+      competitionResults.innerHTML = ""; // hide competition results while searching
+      dateResults.innerHTML = "";        // hide date results while searching
+      gameDateInput.value = "";          // reset date picker
+
+      if (query === "") return; // no results when empty
+
+      allGames.forEach(game => {
+        const link = game.querySelector("a");
+        if (link.textContent.toLowerCase().includes(query)) {
+          const li = document.createElement("li");
+          li.classList.add("game");
+          li.innerHTML = `<a href="${link.href}">${link.textContent}</a>`;
+          searchResults.appendChild(li);
+        }
+      });
+    });
+
+    // --- DATE PICKER FUNCTION ---
+    gameDateInput.addEventListener("change", () => {
+      const selectedDate = gameDateInput.value;
+      dateResults.innerHTML = "";
+      searchResults.innerHTML = "";       // hide search results
+      competitionResults.innerHTML = "";  // hide competition results
+      searchBox.value = "";               // reset search box
+
+      const matches = allGames.filter(game => game.querySelector("a").getAttribute("data-date") === selectedDate);
+
+      if (matches.length === 0) {
+        dateResults.innerHTML = "<li>No games on this date.</li>";
+      } else {
+        matches.forEach(game => {
+          const li = document.createElement("li");
+          li.classList.add("game");
+          li.innerHTML = `<a href="${game.querySelector("a").href}">${game.querySelector("a").textContent}</a>`;
+          dateResults.appendChild(li);
+        });
+      }
+    });
+  </script>
 </body>
 </html>
