--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     body {
       font-family: Arial, sans-serif;
     }
+
     .game {
       margin: 5px 0;
       padding: 8px;
       border-radius: 6px;
       background: #f4f4f4;
     }
+
     .game a {
       text-decoration: none;
       color: #333;
     }
+
     .competition {
       margin: 5px 0;
       padding: 6px 10px;
@@ -26,8 +29,15 @@
       cursor: pointer;
       display: inline-block;
     }
+
     .competition:hover {
       background: #99ccff;
+    }
+
+    input {
+      padding: 6px;
+      margin: 4px 0;
+      width: 250px;
     }
   </style>
 </head>
@@ -69,11 +79,19 @@
     // --- COMPETITION FILTER ---
     const competitionList = document.getElementById("competitionList");
     const competitionResults = document.getElementById("competitionResults");
+    const searchResults = document.getElementById("searchResults");
+    const dateResults = document.getElementById("dateResults");
+    const searchBox = document.getElementById("searchBox");
+    const gameDateInput = document.getElementById("gameDate");
 
     competitionList.addEventListener("click", (e) => {
       if (e.target.classList.contains("competition")) {
         const compName = e.target.getAttribute("data-competition");
         competitionResults.innerHTML = "";
+        searchResults.innerHTML = ""; // clear search results
+        dateResults.innerHTML = "";   // clear date results
+        searchBox.value = "";         // clear search box
+        gameDateInput.value = "";     // clear date picker
 
         const matches = allGames.filter(game => game.getAttribute("data-competition") === compName);
 
@@ -93,12 +111,15 @@
     });
 
     // --- SEARCH FUNCTION ---
-    const searchBox = document.getElementById("searchBox");
-    const searchResults = document.getElementById("searchResults");
-
     searchBox.addEventListener("input", () => {
       const query = searchBox.value.toLowerCase();
       searchResults.innerHTML = "";
+      competitionResults.innerHTML = ""; // hide competition results while searching
+      dateResults.innerHTML = "";        // hide date results while searching
+      gameDateInput.value = "";          // reset date picker
+
+      if (query === "") return; // no results when empty
+
       allGames.forEach(game => {
         const link = game.querySelector("a");
         if (link.textContent.toLowerCase().includes(query)) {
@@ -111,12 +132,12 @@
     });
 
     // --- DATE PICKER FUNCTION ---
-    const gameDateInput = document.getElementById("gameDate");
-    const dateResults = document.getElementById("dateResults");
-
     gameDateInput.addEventListener("change", () => {
       const selectedDate = gameDateInput.value;
       dateResults.innerHTML = "";
+      searchResults.innerHTML = "";       // hide search results
+      competitionResults.innerHTML = "";  // hide competition results
+      searchBox.value = "";               // reset search box
 
       const matches = allGames.filter(game => game.querySelector("a").getAttribute("data-date") === selectedDate);
 
