--- a/games/game2.html
+++ b/games/game2.html
@@ -2,14 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Poland vs. Finland</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     /* Light green background for the page */
     body {
-      background-color: #d4f4c4; /* light green */
+      margin: 0;
+      padding: 0;
+      width: 100%;
       font-family: Arial, sans-serif;
       position: relative;
+      display: flex;
+      justify-content: center; /* centers the main content */
+      background-color: #d4f4c4;
+    }
+
+    main {
+      width: 90%;
+      max-width: 1200px;
     }
 
     /* Competition logo in the top-right corner */
@@ -59,6 +70,14 @@
     th {
       background-color: #ddd;
     }
+
+    a.back-link {
+      display: inline-block;
+      margin: 20px 0;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -66,106 +85,108 @@
   <!-- Competition Logo -->
   <img src="../images/Fibafriendly.png" alt="Competition Logo" class="competition-logo">
 
-  <h1>Poland vs Finland</h1>
-  <p>Date: 17. August 2025</p>
-  <p>International Friendly</p>
+  <main>
+    <h1>Poland vs Finland</h1>
+    <p>Date: 17. August 2025</p>
+    <p>International Friendly</p>
 
-  <!-- Logos -->
-  <div class="team-logos">
-    <div>
-      <img src="../images/Poland.png" alt="Team1Logo">
+    <!-- Logos -->
+    <div class="team-logos">
+      <div>
+        <img src="../images/Poland.png" alt="Team1Logo">
+      </div>
+      <div>
+        <img src="../images/Finland.png" alt="Team2Logo">
+      </div>
     </div>
-    <div>
-      <img src="../images/Finland.png" alt="Team2Logo">
-    </div>
-  </div>
 
-  <!-- Final Score -->
-  <p class="score">POLAND 88 – 97 FINLAND</p>
+    <!-- Final Score -->
+    <p class="score">POLAND 88 – 97 FINLAND</p>
 
-  <!-- Top Stats -->
-  <h2>Statistics</h2>
-  <ul>
-    <li>TOP SCORER: Lauri MARKKANEN (42)</li>
-    <li>REBOUNDS: Lauri MARKKNANEN (12)</li>
-    <li>ASSISTS: Andrzej PLUTA (6)</li>
-    <li>RATING: Lauri MARKKANEN (10)</li>
-  </ul>
+    <!-- Top Stats -->
+    <h2>Statistics</h2>
+    <ul>
+      <li>TOP SCORER: Lauri MARKKANEN (42)</li>
+      <li>REBOUNDS: Lauri MARKKNANEN (12)</li>
+      <li>ASSISTS: Andrzej PLUTA (6)</li>
+      <li>RATING: Lauri MARKKANEN (10)</li>
+    </ul>
 
-  <!-- Full Stats Team A -->
-  <h2>POLAND Stats</h2>
-  <table>
-    <tr>
-      <th>Player</th>
-      <th>Points</th>
-      <th>Rebounds</th>
-      <th>Assists</th>
-      <th>Rating</th>
-    </tr>
-    <tr>
-      <td>Aleksander BALCEROWSKI</td>
-      <td>17</td>
-      <td>4</td>
-      <td>0</td>
-      <td>6.7</td>
-    </tr>
-    <tr>
-      <td>Mateusz PONITKA</td>
-      <td>12</td>
-      <td>5</td>
-      <td>5</td>
-      <td>7.1</td>
-    </tr>
-    <tr>
-      <td>Dominik OLEJNICZAK</td>
-      <td>11</td>
-      <td>6</td>
-      <td>0</td>
-      <td>6.7</td>
-    </tr>
-    <tr>
-      <td>Przemyslaw ZOLNIEREWICZ</td>
-      <td>11</td>
-      <td>1</td>
-      <td>0</td>
-      <td>6.4</td>
-    </tr>
-  </table>
+    <!-- Full Stats Team A -->
+    <h2>POLAND Stats</h2>
+    <table>
+      <tr>
+        <th>Player</th>
+        <th>Points</th>
+        <th>Rebounds</th>
+        <th>Assists</th>
+        <th>Rating</th>
+      </tr>
+      <tr>
+        <td>Aleksander BALCEROWSKI</td>
+        <td>17</td>
+        <td>4</td>
+        <td>0</td>
+        <td>6.7</td>
+      </tr>
+      <tr>
+        <td>Mateusz PONITKA</td>
+        <td>12</td>
+        <td>5</td>
+        <td>5</td>
+        <td>7.1</td>
+      </tr>
+      <tr>
+        <td>Dominik OLEJNICZAK</td>
+        <td>11</td>
+        <td>6</td>
+        <td>0</td>
+        <td>6.7</td>
+      </tr>
+      <tr>
+        <td>Przemyslaw ZOLNIEREWICZ</td>
+        <td>11</td>
+        <td>1</td>
+        <td>0</td>
+        <td>6.4</td>
+      </tr>
+    </table>
 
-  <!-- Full Stats Team B -->
-  <h2>FINLAND Stats</h2>
-  <table>
-    <tr>
-      <th>Player</th>
-      <th>Points</th>
-      <th>Rebounds</th>
-      <th>Assists</th>
-      <th>Rating</th>
-    </tr>
-    <tr>
-      <td>Lauri MARKKANEN</td>
-      <td>42</td>
-      <td>12</td>
-      <td>0</td>
-      <td>10</td>
-    </tr>
-    <tr>
-      <td>Olivier NKAMHOUA</td>
-      <td>12</td>
-      <td>5</td>
-      <td>4</td>
-      <td>7.4</td>
-    </tr>
-    <tr>
-      <td>Sasu SALIN</td>
-      <td>11</td>
-      <td>0</td>
-      <td>4</td>
-      <td>6.9</td>
-    </tr>
-  </table>
+    <!-- Full Stats Team B -->
+    <h2>FINLAND Stats</h2>
+    <table>
+      <tr>
+        <th>Player</th>
+        <th>Points</th>
+        <th>Rebounds</th>
+        <th>Assists</th>
+        <th>Rating</th>
+      </tr>
+      <tr>
+        <td>Lauri MARKKANEN</td>
+        <td>42</td>
+        <td>12</td>
+        <td>0</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td>Olivier NKAMHOUA</td>
+        <td>12</td>
+        <td>5</td>
+        <td>4</td>
+        <td>7.4</td>
+      </tr>
+      <tr>
+        <td>Sasu SALIN</td>
+        <td>11</td>
+        <td>0</td>
+        <td>4</td>
+        <td>6.9</td>
+      </tr>
+    </table>
 
-  <a href="../index.html">Back to all games</a>
+    <a href="../index.html" class="back-link">Back to all games</a>
+  </main>
 
 </body>
 </html>
