--- a/games/game2.html
+++ b/games/game2.html
@@ -52,6 +52,11 @@
       margin-bottom: 20px;
     }
 
+    .score-number {
+      font-size: 2.5em; /* bigger font for the numbers */
+      font-weight: bold;
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
@@ -101,7 +106,7 @@
     </div>
 
     <!-- Final Score -->
-    <p class="score">POLAND 88 – 97 FINLAND</p>
+    <p class="score">POLAND <span class="score-number">88 – 97</span> FINLAND</p>
 
     <!-- Top Stats -->
     <h2>Statistics</h2>
