--- a/games/game2.html
+++ b/games/game2.html
@@ -14,13 +14,14 @@
       font-family: Arial, sans-serif;
       position: relative;
       display: flex;
-      justify-content: center; /* centers the main content */
+      justify-content: column; /* centers the main content */
       background-color: #d4f4c4;
     }
 
     main {
       width: 90%;
       max-width: 1200px;
+      margin: 0 auto; /* centers the main content horizontally */
     }
 
     /* Competition logo in the top-right corner */
