--- a/games/game2.html
+++ b/games/game2.html
@@ -14,7 +14,8 @@
       font-family: Arial, sans-serif;
       position: relative;
       display: flex;
-      justify-content: center; /* centers the main content */
+      flex-direction: column; /* add this */
+      align-items: center;    /* center horizonzally */
       background-color: #d4f4c4;
     }
 
