--- a/games/game2.html
+++ b/games/game2.html
@@ -12,16 +12,13 @@
       padding: 0;
       width: 100%;
       font-family: Arial, sans-serif;
-      position: relative;
-      display: flex;
-      flex-direction: column; /* add this */
-      align-items: center;    /* center horizonzally */
       background-color: #d4f4c4;
     }
 
     main {
       width: 90%;
       max-width: 1200px;
+      margin: 0 auto; /*centers the main content horizontally */
     }
 
     /* Competition logo in the top-right corner */
