--- a/games/game2.html
+++ b/games/game2.html
@@ -10,7 +10,6 @@
     body {
       margin: 0;
       padding: 0;
-      width: 100%;
       font-family: Arial, sans-serif;
       background-color: #d4f4c4;
     }
@@ -19,6 +18,7 @@
       width: 90%;
       max-width: 1200px;
       margin: 0 auto; /*centers the main content horizontally */
+      text-align: center; /*centers the inline content inside the main */
     }
 
     /* Competition logo in the top-right corner */
