--- a/games/game2.html
+++ b/games/game2.html
@@ -12,13 +12,13 @@
       padding: 0;
       font-family: Arial, sans-serif;
       background-color: #d4f4c4;
+      display: flex;
+      justify-content: center; /* centers the main container */
     }
 
     main {
       width: 90%;
       max-width: 1200px;
-      margin: 0 auto; /*centers the main content horizontally */
-      text-align: center; /*centers the inline content inside the main */
     }
 
     /* Competition logo in the top-right corner */
