--- a/games/game2.html
+++ b/games/game2.html
@@ -10,10 +10,12 @@
     body {
       margin: 0;
       padding: 0;
+      width: 100%;
       font-family: Arial, sans-serif;
-      background-color: #d4f4c4;
+      position: relative;
       display: flex;
-      justify-content: center; /* centers the main container */
+      justify-content: center; /* centers the main content */
+      background-color: #d4f4c4;
     }
 
     main {
@@ -50,6 +52,7 @@
       margin-bottom: 20px;
     }
 
+    /* ONLY change: make the score numbers bigger */
     .score-number {
       font-size: 2.5em; /* bigger font for the numbers */
       font-weight: bold;
